# my-claude-code-switch

./: .gitignore  README.md  README.zh-CN.md  pyproject.toml
ccs/: __init__.py  __main__.py
ccs/core/: __init__.py  config.py  env_compat.py  models.py  targets.py
ccs/targets/: __init__.py  base.py  docker_target.py  wsl_target.py
ccs/tui/: __init__.py  app.py
docs/: bridge-network-issue.md
example/: profiles.example.yaml
scripts/: bridge-health.sh
